fix: website meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <meta name="author" content="Rea">
+  <meta name="description" content="星空输入法，键道6在线议题词库管理工具。">
+  <meta name="keywords" content="星空输入法, 键道6, 键道, 星空键道, 在线词库, 词库议表">
+  <title>词库议题 — 星空键道输入法</title>
 </head>
 
 <body>
