--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <meta name="description" content="星空输入法，键道6在线议题词库管理工具。">
   <meta name="keywords" content="星空输入法, 键道6, 键道, 星空键道, 在线词库, 词库议表">
   <title>词库议题 — 星空键道输入法</title>
+  <script> 
+    var $buoop = {required:{e:-4,f:-3,o:-3,s:-1,c:-3},insecure:true,api:2022.07 }; 
+    function $buo_f(){ 
+     var e = document.createElement("script"); 
+     e.src = "//browser-update.org/update.min.js"; 
+     document.body.appendChild(e);
+    };
+    try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+    catch(e){window.attachEvent("onload", $buo_f)}
+    </script>
 </head>
 
 <body>
